--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "electron": "29.1.1",
+    "file-loader": "^6.2.0",
     "node-loader": "^2.0.0",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1"
@@ -38,6 +39,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.7",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
