--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
+    "dotenv-webpack": "^8.1.0",
     "electron": "29.1.1",
     "file-loader": "^6.2.0",
     "node-loader": "^2.0.0",
@@ -40,6 +41,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,7 +52,7 @@
       "@electron-forge/plugin-webpack",
       {
         "mainConfig": "./webpack.main.config.js",
-        "devContentSecurityPolicy": "default-src 'self' 'unsafe-eval' 'unsafe-inline' http://localhost:* ws://localhost:*;",
+        "devContentSecurityPolicy": "default-src 'self' 'unsafe-eval' 'unsafe-inline' $REACT_APP_BACKEND_URL:* $REACT_APP_BACKEND_URL_WS:*;",
         "renderer": {
           "config": "./webpack.renderer.config.js",
           "entryPoints": [
